--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "hardhat-abi-exporter": "^2.3.1",
     "mocha": "^8.3.2",
     "rimraf": "^3.0.2",
-    "solidity-coverage": "^0.7.16",
-    "sleep": "^6.3.0"
+    "sleep": "^6.3.0",
+    "solidity-coverage": "^0.7.16"
   },
   "dependencies": {
     "@nomiclabs/hardhat-truffle5": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1"
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "dotenv": "^16.4.7"
   }
 }
